# sdk-trusted-firmware-m

trusted-firmware-m/cmake/: install.cmake
trusted-firmware-m/config/: config_default.cmake
trusted-firmware-m/interface/include/psa/: tfm_example.h
trusted-firmware-m/interface/src/: tfm_example_func_api.c  tfm_example_ipc_api.c
trusted-firmware-m/secure_fw/: CMakeLists.txt
trusted-firmware-m/secure_fw/partitions/EXAMPLE/: CMakeLists.txt  EXAMPLE.c  tfm_example.yaml  tfm_example_api.c
trusted-firmware-m/tools/: CMakeLists.txt  tfm_manifest_list.yaml  tfm_parse_manifest_list.py
